# Emotion-analyzer2

./: .gitignore  README.md  setup.cfg  web_app.py
emotion_calculator/: __init__.py  cli.py
emotion_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
emotion_calculator/config/: __init__.py  emotion_config.py
emotion_calculator/core/: __init__.py  analyzer.py  context.py  emotions.py  semantic.py
emotion_calculator/data/: __init__.py  models.py
emotion_calculator/utils/: __init__.py  text_processing.py
examples/: basic_usage.py  interactive_demo.py
feedback_data/: feedback_session_1741302347559_wft56od5h_20250307_030953.json
static/css/: style.css
static/js/: script.js
templates/: feedback_report.html  index.html
tests/: __init__.py  test_context.py  test_emotions.py  test_semantic.py
