[metadata]
name = emotion_calculator
version = 0.1.0
description = An emotion calculator for AI systems
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    spacy>=3.0.0
    textblob>=0.15.3

[options.entry_points]
console_scripts =
    emotion-calculator = emotion_calculator.cli:main 